meja/tests/shadowing-generated.meja
type t = field;

type var = field;
